# notes

./: .gitignore  LICENSE  README.md  \  goodlinks.md
.github/workflows/: algocollector.yml  destroy_test_env.yml  test_argocd.yml
alpinejs/001_start/: index.html
assembly/: README.md
assembly/basic/: .gitignore  1_exit.s  2_find_maximum_number.s  3_function.s  4_factorial.s  5_file.s  Dockerfile  Makefile
codingchallenges/wc/: go.mod  main.go
elasticsearch/elk_aws_elasticsearch/: .env  docker-compose.yml
fluentd/docker-compose-test/: docker-compose.yml
fluentd/docker-compose-test-aws/: .env  docker-compose.yaml
generate-parentheses/: README.md
go/aliasgeneric/: go.mod  main.go
go/authenticate_with_cookie/: Makefile  README.md  main.go
go/cgoexample/: main.go  mylib.cpp  mylib.h
go/cmdtool/: go.mod  (+3 more)
k8s/: README.md
openai/: go.mod  main.go
python/llamaindex-test/: agents_workflow_context.py  chat_interface.py  human_in_the_loop.py  main.py  mcp_client.py  multi_agent.py  multi_message_types.py  pyproject.toml  quick_starts_local.py  quick_starts_open_ai.py  rag_db.py  rag_s3.py  stream_response.py  tool_yahoo.py  workflow_basic.py  workflow_concurrency.py  workflow_context_edit_by_tool.py  workflow_state.py  workflow_stream.py
python/llamaindex-test/data/: info.txt
rust/: .gitignore  TODO.md
rust/l0001_bevy/: Cargo.toml  README.md
rust/l0001_bevy/001_quickstart/: main.rs
rust/l0001_bevy/002_3d_shape/: main.rs
sum-of-two-integers/: README.md
two-sum/: README.md
valid-parentheses/: README.md
vault/: .gitignore
zig/: README.md
(+599 files in other folders)
